tests/ui/structopt_name_value_attr.stderr
error: proc-macro derive panicked
  --> $DIR/structopt_name_value_attr.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: expected parentheses, problematic tokens: = "short"
